# desafio-dotgroup

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: schemas.py
app/core/: config.py  database.py
app/models/: __init__.py  book.py  document_embedding.py
app/services/: book_service.py
apps/chatbot/: .env.example  README.md  pyproject.toml
apps/chatbot/src/chatbot/: cli.py  main.py
apps/chatbot/src/chatbot/adapters/: in_memory_conversation_repository.py  langchain_chat_model.py  rag_http_client.py
apps/chatbot/src/chatbot/api/: deps.py  routers.py  schemas.py
apps/chatbot/src/chatbot/core/: config.py
apps/chatbot/src/chatbot/domain/: entities.py  ports.py
apps/chatbot/src/chatbot/service_layer/: services.py
apps/chatbot/tests/integration/: test_chat_api.py
apps/chatbot/tests/unit/: test_ask_question_service.py  test_langchain_chat_model.py  test_rag_http_client.py
apps/library_api/: .env.example  README.md  pyproject.toml
apps/library_api/alembic/: env.py
apps/library_api/alembic/versions/: 2f4cf14b1370_initial_schema.py
apps/library_api/src/library_api/: main.py
apps/library_api/src/library_api/catalog/adapters/: orm.py  repositories.py
apps/library_api/src/library_api/catalog/api/: deps.py  routers.py  schemas.py
apps/library_api/src/library_api/catalog/domain/: entities.py  exceptions.py  ports.py
apps/library_api/src/library_api/catalog/service_layer/: services.py
apps/library_api/src/library_api/lending/adapters/: orm.py  repositories.py
apps/library_api/src/library_api/lending/api/: deps.py  routers.py  schemas.py
apps/library_api/src/library_api/lending/domain/: entities.py  exceptions.py  ports.py
apps/library_api/src/library_api/lending/service_layer/: services.py
apps/library_api/src/library_api/shared/: config.py  database.py  exceptions.py  validation.py
apps/library_api/tests/: conftest.py  test_migrations.py
apps/library_api/tests/integration/: test_authors_api.py  test_books_api.py  test_cors.py  test_loans_api.py
apps/library_api/tests/unit/: test_author_service.py  test_book_repository.py  test_loan_service.py  test_validation.py
apps/rag/: .env.example  README.md  pyproject.toml
apps/rag/data/raw/: async-await.md  fastapi-dependency-injection.md  nocoes-basicas-python.txt  type-hints.md  virtualenv-e-gerenciamento-de-dependencias.md
apps/rag/src/rag/: cli.py  main.py
apps/rag/src/rag/adapters/: chunker.py  embedding_factory.py  faiss_store.py  loader.py  openai_strategy.py  sentence_transformers_strategy.py
apps/rag/src/rag/api/: deps.py  routers.py  schemas.py
apps/rag/src/rag/core/: config.py
apps/rag/src/rag/domain/: entities.py  ports.py
apps/rag/src/rag/service_layer/: services.py
apps/rag/tests/integration/: test_api.py  test_search.py
apps/rag/tests/unit/: test_chunker.py  test_embedding_factory.py
chatbot/: service.py
docs/: embeddings.md
libs/observability/: README.md  pyproject.toml
libs/observability/src/observability/: __init__.py  logging.py  middleware.py
libs/observability/tests/: test_logging.py
tests/: test_services.py
vector_store/: embeddings.py  service.py
