[project]
name = "chatbot"
version = "0.1.0"
description = "Chatbot de IA generativa sobre desenvolvimento Python (LangChain + OpenAI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "httpx>=0.27",
  "pydantic-settings>=2.6",
  "observability",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-mock>=3.14"]

[project.scripts]
chatbot = "chatbot.cli:main"

[tool.uv.sources]
observability = { path = "../../libs/observability", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
