[project]
name = "library-api"
version = "0.1.0"
description = "API REST de biblioteca (FastAPI + SQLAlchemy + PostgreSQL + Alembic)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.6",
  "email-validator>=2.2",
  "observability",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[tool.uv.sources]
observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/library_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
