[project]
name = "rag"
version = "0.1.0"
description = "Ingestão, embeddings e busca semântica (FAISS) sobre artigos/posts de blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sentence-transformers>=3.2",
  "faiss-cpu>=1.9",
  "langchain-text-splitters>=0.3",
  "openai>=1.54",
  "numpy>=1.26",
  "pydantic-settings>=2.6",
  "observability",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[project.scripts]
rag = "rag.cli:main"

[tool.uv.sources]
observability = { path = "../../libs/observability", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
