[project]
name = "observability"
version = "0.1.0"
description = "Logging estruturado (structlog) e middleware ASGI compartilhados entre os apps do desafio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["structlog>=24.4", "starlette>=0.38"]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
